/* 
  Localizable.strings
  iOS-Template

  Created by Apple on 13/10/21.
  
*/

"Github User Search" = "Github User Search";
"Github Username" = "Github Username";
"Repos for" = "Repos for";
