...
    searchBar.accessibilityIdentifier = "githubSearchBar"
    searchBar.accessibilityLabel = "Enter Github Username to Search"
    
    tableView.delegate = self
    tableView.dataSource = self
    tableView.registerCell(UITableViewCell.self)
    tableView.accessibilityLabel = "List of Users"
    
    layoutViews()
  }
  
  func layoutViews() {
    view.backgroundColor = .white
...
