//
//  iOS_TemplateUITests.swift
//  iOS-TemplateUITests
//
//  Created by Viranchee on 15/04/21.
//

import XCTest

class iOS_TemplateUITests: XCTestCase {
  
  override func setUpWithError() throws {
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    continueAfterFailure = false
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
  }
  
  override func tearDownWithError() throws {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
  }
  
  func testUserSearch() throws {
    
    let app = XCUIApplication()
    app.launch()
    app/*@START_MENU_TOKEN@*/.searchFields["Github Username"]/*[[".otherElements[\"Enter Github Username to Search\"].searchFields[\"Github Username\"]",".otherElements[\"githubSearchBar\"].searchFields[\"Github Username\"]",".searchFields[\"Github Username\"]"],[[[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    app/*@START_MENU_TOKEN@*/.keys["V"]/*[[".keyboards.keys[\"V\"]",".keys[\"V\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    app.tables["List of Users"]/*@START_MENU_TOKEN@*/.staticTexts["v"]/*[[".cells[\"v\"].staticTexts[\"v\"]",".staticTexts[\"v\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
    app.tables["List of repositories"]/*@START_MENU_TOKEN@*/.staticTexts["2048-ai"]/*[[".cells.staticTexts[\"2048-ai\"]",".staticTexts[\"2048-ai\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
  }

  func testLaunchPerformance() throws {
    if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
      // This measures how long it takes to launch your application.
      measure(metrics: [XCTApplicationLaunchMetric()]) {
        XCUIApplication().launch()
      }
    }
  }
}
